--- a/src/views/header/header.html
+++ b/src/views/header/header.html
@@ -1,5 +1,4 @@
-function LayoutHeader(title, css) {
-    return `<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="ru" >
     <head>
         <title>${title}</title>
@@ -7,7 +6,3 @@ function LayoutHeader(title, css) {
         <link href="${css}" rel="stylesheet" />
     </head>
     <body>
-`;
-}
-
-module.exports = LayoutHeader;
