--- a/src/styles/theme/font.scss
+++ b/src/styles/theme/font.scss
@@ -1,7 +1,20 @@
-@import url('https://fonts.googleapis.com/css?family=IBM+Plex+Mono:400,600&subset=cyrillic-ext');
+@import url('https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,600&subset=cyrillic-ext');
 
 body {
-    font-family: 'IBM Plex Mono', monospace;
+    font-family: 'IBM Plex Sans', Arial, sans-serif;
     font-size: 15px;
     line-height: 1.45;
+}
+
+h1, h2, h3 {
+    font-weight: 600;
+    -webkit-font-smoothing: antialiased;
+}
+
+h1 {
+    font-size: 2.75em;
+}
+
+h2 {
+    font-size: 1.75em;
 }
