--- a/src/styles/theme/body.scss
+++ b/src/styles/theme/body.scss
@@ -34,6 +34,11 @@ body {
     text-align: center;
 }
 
+.vg-header__title {
+    font-size: 24px;
+    font-weight: 400;
+}
+
 .vg-header__dateModify {
     font-size: 13px;
     opacity: .54;
