--- a/src/styles/theme/body.scss
+++ b/src/styles/theme/body.scss
@@ -1,8 +1,19 @@
 @import './vars';
 
+* {
+    -webkit-font-smoothing: antialiased;
+    -webkit-overflow-scrolling: touch;
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
+    -webkit-text-size-adjust: none;
+    -webkit-touch-callout: none;
+    box-sizing: border-box
+}
+
 body {
     padding: 0;
     margin-bottom: 128px;
+
+    font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica Neue,Arial,sans-serif;
 }
 
 .vg-toolbar {
